; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_stats.c_rpc_proc_exit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_stats.c_rpc_proc_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"RPC:       unregistering /proc/net/rpc\0A\00", align 1
@proc_net_rpc = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [4 x i8] c"rpc\00", align 1
@init_net = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_proc_exit() #0 {
  %1 = call i32 @dprintk(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %2 = load i32*, i32** @proc_net_rpc, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  store i32* null, i32** @proc_net_rpc, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @init_net, i32 0, i32 0), align 4
  %6 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %5)
  br label %7

7:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @dprintk(i8*) #1

declare dso_local i32 @remove_proc_entry(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
